--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
   <title>Quick Order page</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css">
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
 <div id="quickOrderPage">
   <div class="container">
-    <div class="row quickOrder-list">
+    <div class="row">
       <div class="quickOrder-header col-xs-12">
         <div class="row">
           <div class="col-xs-2">Item # / Model #</div>
@@ -24,8 +26,8 @@
         </div>
       </div>
       <div class="quickOrder-body col-xs-12">
-        <div class="row">
-            <div class="quickOrder-row">
+        <div class="row quickOrder-list">
+            <!-- <div class="quickOrder-row">
               <div class="row">
                   <div class="col-xs-2"><input type="text" class="form-control" value="4125789"/></div>
                   <div class="col-xs-1"><input type="text" class="form-control" value="10"/></div>
@@ -44,15 +46,18 @@
                     <div class="col-xs-2">$6.00</div> 
                     <div class="col-xs-1"><i class="fa fa-trash-o" aria-hidden="true"></i></div>
                 </div>
-              </div>   
-        </div>
+            </div>    -->
+        </div>        
+      </div>
+      <div class="quickOrder-summary col-xs-12">
+        <div class="row quickOrder-total"></div>
       </div>
     </div>
   </div>
 
 </div>
-
-
+<script src="polyfills.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
 <script src="quick-order.js"></script>
 </body>
 </html>
