--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 
 </div>
 <script src="polyfills.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
 <script src="quick-order.js"></script>
 </body>
