--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
       <div class="quickOrder-summary col-xs-12">
         <div class="row quickOrder-total"></div>
       </div>
+      <div class="quickOrder actions">
+        <button type="button" class="btn btn-primary mt-1" id="addAllLinesToCart">Add all items to cart</button>
+      </div>
     </div>
   </div>
 
